<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="especiais">Especiais</string>
    <string name="pais">Brasil</string>
    <string name="coteudo_do_banner_inicial">Banner inicial dos pacotes</string>
    <string name="imagem_do_pacote">Imagem do pacote</string>
    <string name="preco_final">Preço Final</string>
    <string name="realizar_pagamento">Realizar pagamento</string>
    <string name="mascara_para_nome_no_cartao">qwertyuiopasdfghjklçzxcvbnmQWERTYUIOPASDFGHJKLÇZXCVBNM\u0020</string>
    <string name="orientacao_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra :</string>
    <string name="botao_finaliza_compra">Finalizar compra</string>
    <string name="cvc">CVC</string>
    <string name="numero_do_cartao">Numero do Cartão</string>
    <string name="mes">MM</string>
    <string name="ano">AA</string>
    <string name="nome_no_cartao">Nome no cartao</string>
    <string name="parabens">Parabéns !</string>
    <string name="compra_realizada_com_sucesso">Compra realizada com sucesso :)</string>
    <string name="comfira_o_resumo_da_compra">Comfira o resumo da compra :</string>
    <string name="banner_inicial">Banner inicial</string>
    <string name="imagem_do_local">Imagem do local</string>
</resources>
